# libvmod-imgdata

./: Makefile.am  README.md  README.rst  configure.ac
redhat/: vmod-imgdata.spec
src/: Makefile.am  vmod_imgdata.c  vmod_imgdata.vcc
